// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Input ui defaults to text: Component: Input => ui => defaults to text 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <Input
    id="firstName"
    key="input"
    onBlur={[MockFunction]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    type="text"
    valid={true}
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: Input ui position left: Component: Input => position left 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <InputGroup
    tag="div"
  >
    <Addon
      color="success"
      icon="3d_rotation"
      key="button"
      position="left"
    />
    <Input
      id="firstName"
      key="input"
      onBlur={[MockFunction]}
      onChange={[Function]}
      onFocus={[MockFunction]}
      placeholder="Please enter your first name"
      type="text"
      valid={true}
    />
  </InputGroup>
  Some error
</FormGroup>
`;

exports[`Component: Input ui position right: Component: Input => position right 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <InputGroup
    tag="div"
  >
    <Input
      id="firstName"
      key="input"
      onBlur={[MockFunction]}
      onChange={[Function]}
      onFocus={[MockFunction]}
      placeholder="Please enter your first name"
      type="text"
      valid={true}
    />
    <Addon
      color="success"
      icon="3d_rotation"
      key="button"
      position="right"
    />
  </InputGroup>
  Some error
</FormGroup>
`;

exports[`Component: Input ui type email: Component: Input => ui => type email 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <Input
    id="firstName"
    key="input"
    onBlur={[MockFunction]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    type="email"
    valid={true}
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`Component: Input ui with mask: Component: Input => ui => with mask 1`] = `
<FormGroup
  className=""
  color="success"
  tag="div"
>
  <Label
    for="firstName"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    First name
  </Label>
  <t
    id="firstName"
    key="mask"
    mask={
      Array [
        "(",
        /\\[1-9\\]/,
        /\\\\d/,
        /\\\\d/,
        ")",
        " ",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        "-",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[MockFunction]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    placeholder="Please enter your first name"
    render={[Function]}
    type="text"
    valid={true}
    value="Maarten"
  />
  Some error
</FormGroup>
`;

exports[`reactStrapInput: reactStrapInput 1`] = `
<input
  className="form-control"
  id={10}
  type="text"
/>
`;
